fix: remove login page scrollbar

--- a/src/app/authenticate/login/login.page.scss
+++ b/src/app/authenticate/login/login.page.scss
@@ -1,6 +1,6 @@
 ion-content {
   .login-content {
-    height: 100vh;
+    height: 100%;
 
     display: flex;
 
